# freelancer-contest-2355564

./: .cz.toml  .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  schema.yml
.github/workflows/: create-tag.yml
project/: asgi.py  settings.py  urls.py  wsgi.py
project/restful/: apps.py  authentication.py  mixins.py  openapi.py  pagination.py  renderers.py  schema_extensions.py  serializers.py  views.py
project/scraper/: apps.py  models.py
project/scraper/management/commands/: property.py
project/scraper/migrations/: 0001_initial.py
project/scraper/services/property/: rcm1.py
project/vehicle/: apps.py  models.py  serializers.py  views.py
project/vehicle/migrations/: 0001_initial.py  0002_alter_vehicle_table.py  0003_alter_vehicle_wheel.py
project/vehicle/tests/: factories.py
project/vehicle/tests/feature/: vehicle_endpoint_test.py
